---
source: crates/compiler/tests/tests.rs
expression: parse_errors
---
[
    ParseError {
        ann: Annotation {
            start: Position {
                offset: 4,
                row: 1,
                column: 5,
            },
            end: Position {
                offset: 19,
                row: 1,
                column: 20,
            },
        },
        message: "expected identifier",
    },
    ParseError {
        ann: Annotation {
            start: Position {
                offset: 4,
                row: 1,
                column: 5,
            },
            end: Position {
                offset: 19,
                row: 1,
                column: 20,
            },
        },
        message: "expected '='",
    },
    ParseError {
        ann: Annotation {
            start: Position {
                offset: 0,
                row: 1,
                column: 1,
            },
            end: Position {
                offset: 19,
                row: 1,
                column: 20,
            },
        },
        message: "unexpected `let False = True; a`",
    },
]
